@@ -1,3 +1,7 @@
+2007-08-26  David Lawrence Ramsey  <pooka109@gmail.com>
+
+	* doc/faq.html: Update links to the Free Translation Project.
+
 2007-08-23  Jean-Philippe Guérard <jean-philippe.guerard@tigreraye.org>
 
 	* doc/man/fr/*.1, doc/man/fr/nanorc.5: Add translation of new
